--- a/adapter-xmlgen/src/main/resources/activities/existdb_xmlgen_auction.yaml
+++ b/adapter-xmlgen/src/main/resources/activities/existdb_xmlgen_auction.yaml
@@ -50,8 +50,8 @@ bindings:
   # Each of the following generates the same-sized list on the same cycle, uisng HashInterval(0,5)
   # Each of the generated lists is used in a single __foreach to generate the fields of the individual mail records
   #
-  email_from_names: Add(70); ListSizedStepped(HashInterval(0,5), Flow(Add(80) -> long, ListFunctions(FirstNames(),FixedValue(" "),LastNames(),FixedValue(" <"), LastNames(), FixedValue("@"), AlphaNumericString(4), FixedValue("."), WeightedStrings('com:10;org:8;co.uk:1'), FixedValue(">")),Join("")))
-  email_to_names: Add(70); ListSizedHashed(HashInterval(0,5), Flow(ListFunctions(FirstNames(),FixedValue(" "),LastNames(),FixedValue(" <"), LastNames(), FixedValue("@"), AlphaNumericString(4), FixedValue("."), WeightedStrings('com:10;org:8;co.uk:1'), FixedValue(">")),Join("")))
+  email_from_names: Add(70); ListSizedStepped(HashInterval(0,5), Flow(Add(80) -> long, ListFunctions(FirstNames(),FixedValue(" "),LastNames(),FixedValue(" mailto:"), LastNames(), FixedValue("@"), AlphaNumericString(4), FixedValue("."), WeightedStrings('com:10;org:8;co.uk:1')),Join("")))
+  email_to_names: Add(70); ListSizedHashed(HashInterval(0,5), Flow(ListFunctions(FirstNames(),FixedValue(" "),LastNames(),FixedValue(" mailto:"), LastNames(), FixedValue("@"), AlphaNumericString(4), FixedValue("."), WeightedStrings('com:10;org:8;co.uk:1')),Join("")))
   email_dates: Add(70); ListSizedHashed(HashInterval(0,5), Flow(Uniform(0,30000000), ToDate(86400000,1440)))
   email_text: Add(70); ListSizedHashed(HashInterval(0,5), WarAndPeace())
 
