Rip out xmlgen, leave only existdb
Also remove our VDS extensions; we have moved these into the separate xmlgen2 repository for standalone app.

--- a/adapter-existdb/src/main/resources/activities/existdb_crud_basic.yaml
+++ b/adapter-existdb/src/main/resources/activities/existdb_crud_basic.yaml
@@ -30,7 +30,7 @@ bindings:
   created_on: Uniform(1262304000,1577836800) -> long
   gender: WeightedStrings('M:10;F:10;O:1')
 
-  text: MobyDick()
+  text: WarAndPeace()
   alttext: WarAndPeace()
   
   # The native FullNames() method doesn't give us the same last name as LastNames()
